force-app/main/default/objects/PortalInventoryDetail__c/fields/Application_Hold__c.field-meta.xml
<CustomField>
    <fullName>Application_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BC-341 indicate if the part is reserved as part of WAV configuration</description>
    <inlineHelpText>BC-341 indicate if the part is reserved as part of WAV configuration</inlineHelpText>
    <label>Application Hold</label>
    <type>Checkbox</type>
</CustomField>