force-app/main/default/objects/PortalInventoryDetail__c/fields/Application_Hold_Since__c.field-meta.xml
<CustomField>
    <fullName>Application_Hold_Since__c</fullName>
    <description>BC-351 timestamp since when the inventory is on application hold</description>
    <inlineHelpText>BC-351 timestamp since when the inventory is on application hold</inlineHelpText>
    <label>Application Hold Since</label>
    <type>DateTime</type>
</CustomField>