force-app/main/default/objects/PortalInventoryDetail__c/fields/Case_Hold__c.field-meta.xml
<CustomField>
    <fullName>Case_Hold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BC-658 lookup to case for which hold was requested</description>
    <inlineHelpText>lookup to case for which hold was requested</inlineHelpText>
    <label>Case Hold</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Inventory Items On Hold</relationshipLabel>
    <relationshipName>InventoryItemHold</relationshipName>
    <type>Lookup</type>
</CustomField>