force-app/main/default/objects/PortalInventoryDetail__c/fields/Configuration_ID__c.field-meta.xml
<CustomField>
    <fullName>Configuration_ID__c</fullName>
    <description>BC-251 if on application hold this will be populated with the ID from webconfigurator</description>
    <inlineHelpText>BC-251 if on application hold this will be populated with the ID from webconfigurator</inlineHelpText>
    <label>Configuration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>